# cozip

./: .gitignore  Cargo.toml  README.ja.md  README.md  bench.sh  gdeflate_bench.sh
cozip_deflate/: Cargo.toml
cozip_deflate/examples/: bench_1gb.rs  bench_hybrid.rs
cozip_deflate/src/: frame.rs  gpu.rs  lib.rs  tests.rs
cozip_deflate/tests/: hybrid_integration.rs
cozip_zip/: Cargo.toml
cozip_zip/src/: lib.rs
docs/: README.md  architecture.md  context-log.md  deflate-parallel-profile.md  gdeflate-hybrid-cpu-gpu-design.md  gpu-deflate-chunk-pipeline.md  gpu-full-task-design.md  hybrid-decompress-with-zip-metadata-design.md  optimization-candidates.md  pdeflate-gpu-sparse-direct-output-design.md  pdeflate-v0-spec.md  zip-compatible-hybrid-deflate-design.md  zip-gpu-compatibility.md
docs/tasks/: README.md  pdeflate-gpu-sparse-direct-output-tasks.md
packaging/linux/: cozip-compress-cozip-servicemenu.desktop  cozip-compress-details-servicemenu.desktop  cozip-compress-servicemenu.desktop  cozip-compress-zip-servicemenu.desktop  install.sh  (+5 more)
src/cozip_deflate/: Cargo.toml
src/cozip_deflate/examples/: bench_1gb.rs  bench_hybrid.rs
src/cozip_deflate/src/: gpu.rs  lib.rs  tests.rs
src/cozip_deflate/src/shaders/: bitpack.wgsl  decode_stored.wgsl  dyn_finalize.wgsl  freq.wgsl  scan_blocks.wgsl  tokenize.wgsl
src/cozip_deflate/tests/: hybrid_integration.rs
src/cozip_win_shell/: Cargo.toml
src/cozip_win_shell/locales/: en_US.toml  ja_JP.toml  zh_CN.toml
src/cozip_win_shell/src/: class_ids.rs  command.rs  factory.rs  i18n.rs  launch.rs  lib.rs  registration.rs
(+73 files in other folders)
