[package]
name = "cozip_deflate"
version.workspace = true
edition.workspace = true

[dependencies]
bytemuck = "=1.24.0"
crc32fast = "=1.5.0"
flate2 = { version = "=1.1.8", default-features = false, features = ["zlib-rs"] }
pollster = "=0.3.0"
thiserror.workspace = true
tokio = { version = "=1.48.0", features = ["fs", "io-util"] }
wgpu = "=0.19.4"
