[package]
name = "cozip_win_shell"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
thiserror = "=2.0.17"
toml = "0.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.57.0", features = [
    "implement",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
] }
windows-core = "0.57.0"
winreg = "0.52"
